# recipes

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  recipes.cabal  shell.nix
app/: Main.hs
css/: default.css
recipes/: asperagus-lemon.yaml  asperagus-lemon.yaml~  banana-bread.yaml  banana-bread.yaml~  challah-bread.yml  chicken-taginish.yaml  couscous-salad.yaml  gorgonzola-cream-pasta.yaml  gorgonzola-cream.yaml  gorgonzola-cream.yaml~  italian-salsa-verde.yaml  lemon-yoghurt-cake.yaml  palak-tofu.yaml  quiche-crust.yaml  sheet-pan-bibimbap.yaml  steamed-fish-with-pak-choi.yaml
src/Recipes/: Compiler.hs  RecipeCompiler.hs  Types.hs  Utils.hs
templates/: index.html  recipe.html
