name:                recipes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dbalan/recipes#readme
license:             BSD3
license-file:        LICENSE
author:              Dhananjay Balan
maintainer:          git@dbalan.in
copyright:           2020 Dhananjay Balan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Recipes.Types
                     , Recipes.Compiler
                     , Recipes.RecipeCompiler
                     , Recipes.Utils
  build-depends:       base >= 4.13 && < 5
                     , text
                     , titlecase
                     , yaml
                     , utf8-string
                     , bytestring
                     , hakyll >= 4.13.0.0 && < 4.14
                     , filepath
                     , interpolate

default-language:    Haskell2010

executable recipes-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , recipes
  default-language:    Haskell2010

test-suite recipes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , recipes
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dbalan/recipes
